--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+*:focus {
+    outline: 2px solid red;
+}
+
 html, body {
     height: 100%;
 }
@@ -43,6 +47,20 @@ h3 {
 
 p {
     line-height: 25px;
+}
+
+#skip a {
+    position: absolute;
+    left: -10000px;
+    top: auto;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+    &:focus {
+        height: auto;
+        position: static;
+        width: auto;
+    }
 }
 
 .flex {
@@ -240,6 +258,7 @@ p {
     width: 144px;
     position: absolute;
     top: 2.5rem;
+    z-index: 2;
 
     @media screen and (min-width:768px) {
         position: relative;
@@ -258,6 +277,7 @@ p {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    position: relative;
     
     @media screen and (min-width:768px) {
         padding-top: 5rem;
@@ -268,10 +288,20 @@ p {
     .container {
         @media screen and (min-width:768px) {
             margin:0 0 0 10% ;
+            z-index: 2;
             
         }
     }
 
+    .overlay {
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background: rgba(0,0,0,.5);
+        z-index: 1;
+    }
     
 }
 
